--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.15.15",
+    "@mui/x-date-pickers": "^7.3.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -15,6 +16,7 @@
     "bcrypt": "^5.1.0",
     "bootstrap": "^5.2.2",
     "buffer": "^6.0.3",
+    "dayjs": "^1.11.11",
     "express": "^4.18.2",
     "font-awesome": "^4.7.0",
     "jsonwebtoken": "^8.5.1",
